# learn-opencv

./: .gitignore  CMakeLists.txt  README.md  note.md
FFT/: CMakeLists.txt  main.cpp
MaskCut/: CMakeLists.txt  main.cpp
ROI/: CMakeLists.txt  main.cpp
SURF/: Makefile  README.md  SURF_FlannMatcher.cpp
SURF/SURF_FlannMatcher/: README.md
SURF/SURF_descriptor/: Makefile  README.md  SURF_descriptor.cpp
SVD/: CMakeLists.txt  Makefile  gen_eclipse.sh  svd.cpp
Structural_Analysis_and_Shape_Descriptors/: CMakeLists.txt  main.cpp
create_mat/: Makefile  create_mat.cpp
kalman/: Makefile  kalman_mouse.cpp
least_squares/: CMakeLists.txt  gen_vs2015_64.sh  least_squares.cpp
viz/: Makefile
